[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/player_options.gd" type="Script" id=1]

[node name="PlayerOptions" type="PanelContainer"]
margin_left = 207.0
margin_right = 455.0
margin_bottom = 202.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 195.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 194.0
margin_bottom = 148.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 14.0
text = "Options"
align = 1
valign = 1

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 154.0
margin_bottom = 48.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Name"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 58.0
margin_right = 116.0
margin_bottom = 24.0
max_length = 16
expand_to_text_length = true

[node name="Class" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 154.0
margin_bottom = 78.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Class"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Class"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Class"]
margin_left = 53.0
margin_right = 113.0
margin_bottom = 20.0
text = "Base"
items = [ "Base", null, false, 0, null ]
selected = 0

[node name="Input" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 154.0
margin_bottom = 108.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Input"]
margin_top = 3.0
margin_right = 34.0
margin_bottom = 17.0
text = "Input"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Input"]
margin_left = 54.0
margin_right = 154.0
margin_bottom = 20.0
text = "Keyboard 1"
items = [ "Keyboard 1", null, false, 0, null, "Keyboard 2", null, false, 1, null, "Controller", null, false, 2, null ]
selected = 0
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Name/LineEdit" to="." method="update_name"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Class/OptionButton" to="." method="update_class"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Input/OptionButton" to="." method="update_input"]
